--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CC=gcc
 
 
 ODIR=obj
-CFLAGS=-I/usr/share/flite/flite
+FLITEDIR=/usr/share/flite/flite
 
 serial_to_voice: main.o
-	$(CC) -Wall -o serial_to_voice main.c $(CFLAGS)
+	$(CC) -Wall -g -o serial_to_voice main.c -I$(FLITEDIR) -L$FLITEDIR/lib -lflite_cmu_us_kal -lflite_usenglish -lflite_cmulex -lflite -lm
